Table "approval_status" {
  "status" "character varying" [pk, not null]
}

Table "bike_lane_type" {
  "name" "character varying" [pk, not null]
}

Table "bna_pipeline" {
  "state_machine_id" uuid [pk, not null]
  "step" "character varying" [not null]
  "sqs_message" json
  "fargate_price_id" integer
  "fargate_task_arn" "character varying"
  "s3_bucket" "character varying"
  "status" "character varying" [not null, default: `'Pending'::charactervarying`]
  "start_time" timestamp [not null]
  "end_time" timestamp
  "cost" numeric
}

Table "bna_pipeline_status" {
  "status" "character varying" [pk, not null]
}

Table "bna_pipeline_step" {
  "step" "character varying" [pk, not null]
}

Table "bna_region" {
  "name" "character varying" [pk, not null]
}

Table "city" {
  "id" uuid [unique, not null]
  "country" "character varying" [not null]
  "state" "character varying" [not null]
  "name" "character varying" [not null]
  "latitude" doubleprecision
  "longitude" doubleprecision
  "region" "character varying"
  "state_abbrev" "character varying"
  "residential_speed_limit" integer
  "created_at" timestamp [not null, default: `CURRENT_TIMESTAMP`]
  "updated_at" timestamp
  "fips_code" "character varying"

  Indexes {
    (country, state, name) [pk, name: "city_pkey"]
    id [type: btree, name: "city_id_idx"]
  }
}

Table "core_services" {
  "id" uuid [pk, not null]
  "dentists" doubleprecision
  "doctors" doubleprecision
  "grocery" doubleprecision
  "hospitals" doubleprecision
  "pharmacies" doubleprecision
  "score" doubleprecision
  "social_services" doubleprecision
}

Table "country" {
  "name" "character varying" [pk, not null]
}

Table "fargate_price" {
  "id" integer [pk, not null]
  "per_second" numeric [not null]
  "created_at" timestamp [not null, default: `CURRENT_TIMESTAMP`]
}

Table "infrastructure" {
  "id" uuid [pk, not null]
  "low_stress_miles" doubleprecision
  "high_stress_miles" doubleprecision
}

Table "measure" {
  "id" uuid [pk, not null]
  "buffered_lane" real
  "lane" real
  "path" real
  "sharrow" real
  "track" real
}

Table "opportunity" {
  "id" uuid [pk, not null]
  "employment" doubleprecision
  "higher_education" doubleprecision
  "k12_education" doubleprecision
  "score" doubleprecision
  "technical_vocational_college" doubleprecision
}

Table "people" {
  "id" uuid [pk, not null]
  "score" doubleprecision
}

Table "recreation" {
  "id" uuid [pk, not null]
  "community_centers" doubleprecision
  "parks" doubleprecision
  "recreation_trails" doubleprecision
  "score" doubleprecision
}

Table "retail" {
  "id" uuid [pk, not null]
  "score" doubleprecision
}

Table "seaql_migrations" {
  "version" "character varying" [pk, not null]
  "applied_at" bigint [not null]
}

Table "state_region_crosswalk" {
  "state" "character varying" [not null]
  "region" "character varying" [not null]

  Indexes {
    (state, region) [pk, name: "state_region_crosswalk_pkey"]
    region [type: btree, name: "state_region_crosswalk_region_idx"]
    state [type: btree, name: "state_region_crosswalk_state_idx"]
  }
}

Table "submission" {
  "id" integer [pk, not null]
  "first_name" "character varying" [not null]
  "last_name" "character varying" [not null]
  "occupation" "character varying"
  "organization" "character varying"
  "email" "character varying" [not null]
  "country" "character varying" [not null]
  "city" "character varying" [not null]
  "region" "character varying"
  "fips_code" "character varying" [not null, default: `'0'::charactervarying`]
  "consent" boolean [not null]
  "status" "character varying" [not null]
  "created_at" timestamp [not null, default: `CURRENT_TIMESTAMP`]
}

Table "summary" {
  "id" uuid [pk, not null]
  "city_id" uuid [not null]
  "created_at" timestamp [not null, default: `CURRENT_TIMESTAMP`]
  "pop_size" integer [not null]
  "population" integer [not null]
  "residential_speed_limit_override" integer
  "score" doubleprecision [not null]
  "version" "character varying" [not null]

  Indexes {
    (city_id, created_at, version) [type: btree, name: "summary_city_id_created_at_version_idx"]
  }
}

Table "transit" {
  "id" uuid [pk, not null]
  "score" doubleprecision
}

Table "us_state" {
  "name" "character varying" [pk, not null]
  "abbrev" "character varying" [unique, not null]
  "fips_code" "character varying" [unique, not null]
  "speed_limit" integer [not null]

  Indexes {
    abbrev [type: btree, name: "us_state_abbrev_idx"]
    fips_code [type: btree, name: "us_state_fips_code_idx"]
  }
}

Ref "bna_pipeline_fargate_price_id_fkey":"fargate_price"."id" < "bna_pipeline"."fargate_price_id"

Ref "bna_pipeline_status_fkey":"bna_pipeline_status"."status" < "bna_pipeline"."status"

Ref "bna_pipeline_step_fkey":"bna_pipeline_step"."step" < "bna_pipeline"."step"

Ref "city_country_fkey":"country"."name" < "city"."country"

Ref "core_services_id_fkey":"summary"."id" < "core_services"."id" [delete: cascade]

Ref "infrastructure_id_fkey":"summary"."id" < "infrastructure"."id" [delete: cascade]

Ref "measure_id_fkey":"summary"."id" < "measure"."id" [delete: cascade]

Ref "opportunity_id_fkey":"summary"."id" < "opportunity"."id" [delete: cascade]

Ref "people_id_fkey":"summary"."id" < "people"."id" [delete: cascade]

Ref "recreation_id_fkey":"summary"."id" < "recreation"."id" [delete: cascade]

Ref "retail_id_fkey":"summary"."id" < "retail"."id" [delete: cascade]

Ref "state_region_crosswalk_region_fkey":"bna_region"."name" < "state_region_crosswalk"."region"

Ref "state_region_crosswalk_state_fkey":"us_state"."name" < "state_region_crosswalk"."state"

Ref "submission_country_fkey":"country"."name" < "submission"."country"

Ref "submission_status_fkey":"approval_status"."status" < "submission"."status"

Ref "summary_city_id_fkey":"city"."id" < "summary"."city_id" [delete: cascade]

Ref "transit_id_fkey":"summary"."id" < "transit"."id" [delete: cascade]
